# mandelbulb

./: CMakeLists.txt  README.md
results/: README.md
src/: application.cpp  application.h  constants.h  main.cpp  pch.h  shader_manager.cpp  shader_manager.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_layer.cpp  vulkan_layer.h  window_manager.cpp  window_manager.h
src/asset_managment/: asset_base.hpp  asset_container.hpp  asset_id.h  asset_loader.cpp  asset_loader.h  asset_loader_gltf.cpp  asset_loader_mesh.hpp  asset_loader_obj.cpp  asset_loader_texture.cpp  asset_loader_texture.h  asset_manager.cpp  asset_manager.h  coloured_mesh.cpp  coloured_mesh.h  compatibility_descriptor.h  composite_mesh.cpp  composite_mesh.h  material.cpp  material.h  material_traits.cpp  material_traits.h  mesh.cpp  mesh.h  mesh_traits.h  texture.cpp  texture.h
src/camera/: perspective_camera.cpp  perspective_camera.h
src/cuda/: interop.cu  interop.cuh
src/gui/: gui_manager.cpp  gui_manager.h  imgui_ext.cpp  imgui_ext.h
src/rendering/: common_rendering.cpp  common_rendering.h  render_context.h  renderer.cpp  renderer.h  renderer_dependency_provider.h
src/resources/: gpu_resources.cpp  gpu_resources.h  resource_manager.cpp  resource_manager.hpp
src/scene/: game_object.h  game_scene.cpp  game_scene.h  lights.h  transform.hpp
src/shaders/: copy.frag  forward.frag  forward.vert  forward_common.glsl.spv  forward_simple.frag  forward_simple.vert  full_screen_quad.vert  full_screen_quad.vert.spv  material.glsl  shading.glsl.spv  utility.glsl.spv
src/utility/: mmath.cpp  mmath.h  utility.cpp  utility.hpp
wd/: imgui.ini  logger_settings.ini
wd/shaders/: copy.frag.spv  forward.frag.spv  forward.vert.spv  forward_simple.frag.spv  forward_simple.vert.spv
